# adventOfCode

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  index.js  jsconfig.json  package.json  pnpm-lock.yaml  tmp.txt
2015/01/: a.js  b.js
2015/03/: a.js
2015/04/: a.js
2015/07/: a.js
2015/08/: a.js  b.js
2015/10/: b.js
2015/11/: a.js  b.js
2015/12/: a.js  b.js
2015/14/: a.js  b.js
2015/19/: a.js  b.js
2015/2/: a.js  b.js
2015/20/: a.js  b.js
2015/25/: a.js
2015/4/: b.js
2015/5/: a.js  b.js
2015/6/: a.js  b.js
2016/d01/: Cargo.toml
2016/d02/: Cargo.toml
2017/d01/: Cargo.toml
2017/d02/: Cargo.toml
2017/d03/: Cargo.toml
2021/: 04.js  05.js  08.js  10.js  13.js
2021/01/: a.js  b.js
2021/02/: a.js  b.js
2021/03/: a.js  b.js
2021/04/: a.js  b.js
2021/06/: b.js
2021/07/: b.js
2021/09/: a.js
2021/14/: a.js
2021/17/: a.js  b.js
2021/24/: a.js
2022/01/: b.js
2022/02/: b.js
2022/03/: a.js  b.js
2022/04/: a.js
2022/05/: a.js  b.js
2022/06/: a.js  b.js
2022/07/: a.js
2022/09/: b.js
2022/1/: a.js
2022/10/: a.js  b.js
2022/11/: a.js  b.js
2022/12/: a.js  b.js
2022/13/: a.js  b.js
2022/14/: a.js  b.js
2022/15/: a.js  b.js
2022/16/: a.js  b.js
2022/17/: a.js  b.js
2022/18/: a.js  b.js
2022/19/: a.js
2022/2/: a.js
2022/20/: b.js
2022/21/: a.js  b.js
2022/22/: a.js  b.js
2022/23/: a.js  b.js
2022/24/: a.js  b.js
2022/25/: a.js
2022/4/: b.js
2022/7/: b.js
2022/8/: a.js  b.js
lib/: floodfill.js  grid.js  index.js  package.json  range.js
scripts/: setup.js
(+94 files in other folders)
