[workspace]
members = [
  "2016/d01", 
  "2017/d01", "2017/d02", "2017/d03", 
  "2024/d01", "2024/d02"
  , "2024/d03", "2024/d04", "2024/d05", "2024/d06", "2024/d07", "2024/d08", "2024/d09", "2024/d10", "2024/d11", "2024/d12", "2024/d13", "2024/d14", "2024/d15", "2024/d16", "2024/d17", "2024/d18"]

[workspace.dependencies]
